src/app/snapshots/jk__app__tests__snapshot_renders_restore_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Restore Result
==============

Summary: Restored 2 paths from revision abcdef12

Restored 2 paths from revision abcdef12

Tip: run `log`, `status`, or `diff` to verify the resulting history
