src/app/snapshots/jk__app__tests__snapshot_renders_revert_wrapper_view.snap
---
source: src/app/tests.rs
expression: "rendered.join(\"\\n\")"
---
Revert Result

Summary: Reverted 2 paths from revision abcdef12

Reverted 2 paths from revision abcdef12

Tip: run `log`, `status`, or `diff` to verify the resulting history
