src/app/snapshots/jk__app__tests__snapshot_renders_simplify_parents_wrapper_view.snap
---
source: src/app/tests.rs
expression: "rendered.join(\"\\n\")"
---
Simplify-parents Result

Summary: Rebased 2 commits onto simplified parent set

Rebased 2 commits onto simplified parent set

Tip: run `log`, `status`, or `diff` to verify the resulting history
