src/app/snapshots/jk__app__tests__snapshot_renders_split_wrapper_view.snap
---
source: src/app/tests.rs
expression: "rendered.join(\"\\n\")"
---
Split Result

Summary: Rebased 1 commits onto abcdef12

Rebased 1 commits onto abcdef12

Tip: run `log`, `status`, or `diff` to verify the resulting history
