src/app/snapshots/jk__app__tests__snapshot_renders_status_wrapper_view.snap
---
source: src/app/tests.rs
expression: "rendered.join(\"\\n\")"
---
Status Overview

Summary: 2 working-copy changes, 1 conflicted bookmark

Working copy changes:
  M src/app.rs
  A src/new.rs
Working copy  (@) : abcdefgh 0123abcd summary
Parent commit (@-): hgfedcba 89abcdef parent

Conflicted bookmarks:
feature

Shortcuts: s status, F fetch, P push, B rebase, :commands
