src/app/snapshots/jk__app__tests__snapshot_renders_tag_list_wrapper_view.snap
---
source: src/app/tests.rs
expression: "rendered.join(\"\\n\")"
---
Tag List

Summary: 0 tags listed

(no tags listed)

Tip: use `tag create` and `tag forget` from command mode for tag updates
