src/app/snapshots/jk__app__tests__snapshot_renders_tag_set_wrapper_view.snap
---
source: src/app/tests.rs
expression: "rendered.join(\"\\n\")"
---
Tag Set

Summary: 1 output line

Created tag v0.2.0 pointing to abc12345

Tip: run `tag list` to confirm updated tag targets
