src/app/snapshots/jk__app__tests__snapshot_renders_undo_wrapper_view.snap
---
source: src/app/tests.rs
expression: "rendered.join(\"\\n\")"
---
Undo Result

Summary: Undid operation 67d547b627fb

Undid operation 67d547b627fb

Tip: run `operation log` to inspect operation history
